[project]
name = "sailed.io"
version = "0.10.9"
description = "CLI tool to deploy and manage WordPress applications on DigitalOcean"
readme = "README.md"
authors = [{ name = "Konstantin Kovshenin", email = "kovshenin@gmail.com" }]
dependencies = []
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://sailed.io"

[project.scripts]
sail = "sail:cli"

[tool.flit.module]
name = "sail"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
